	Add description for this PyGTK 2.2 function.

	* pygtk-gtkobject.xml (gtk.bindings_activate_event) Add.
	(gtk.bindings_activate) Fix name.

	* pygtk-gtk-stock-items.xml (gtk.stock_add)
	(gtk.stock_lookup) (gtk.stock_list_ids) Add description of
	these functions.

	* pygtk-gtk-functions.xml Add links to all functions and update
	description.

	* pygtk-gtkwindow.xml Fix typo.

2004-04-22  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkpixbuf.xml
	(gtk.gdk.pixbuf_new_from_data) (gtk.gdk.pixbuf_new_from_array)
	Add descriptions of these PyGTK 2.2 functions.
	(gtk.gdk.pixbuf_new_from_file_at_size)
	(gtk.gdk.pixbuf_get_formats) (gtk.gdk.pixbuf.get_file_info)
	Add descriptions of these PyGTK 2.4 functions.
	("bits-per-sample"( ("colorspace") ("has-alpha") ("height")
	("n-channels") ("pixels") ("rowstride") ("width")
	Add descriptions fo these GTK+ 2.4 properties.

	* pygtk-gdkpixbuf.xml (gtk.gdk.pixbuf_get_formats) Tweak description.

	* pygtk-gdkpixbufloader.xml (set_size) (get_format)
	Add descriptions for these PyGTK 2.4 methods.
	(gtk.gdk.pixbuf_loader_new_with_mime_type)
	Add description for this PyGTK 2.4 function
	("size-prepared") Add desription of this GTK+ 2.2 signal.

	* pygtk-gdkpixmap.xml (gtk.gdk.pixmap_foreign_new_for_display)
	(gtk.gdk.pixmap_lookup_for_display) Add descriptions for these
	PyGTK 2.2 functions.

	* pygtk-gdkrectangle.xml (union) Fix typo.

	* pygtk-gdkscreen.xml Add.
	Add purpose description.

	* pygtk-gdkvisual.xml Reorder attribute list.
	(get_screen) Add desciption of this PyGTK 2.2 method.
	(query_depths) (query_visual_types)
	Add description of these PyGTK 2.4 functions.

	* pygtk-gdkwindow.xml (set_keep_above) (set_keep_below)
	(set_skip_taskbar) (set_skip_pager) (set_geometry_hints)
	(get_deskrelative_origin) (set_icon_list)
	(fullscreen) (unfullscreen)
	Add descriptions of these methods.
	(gtk.gdk.window_at_pointer)
	Add description for this function.

2004-04-21  John Finlay  <finlay@moeraki.com>
