@@ -347,6 +347,46 @@ linkend="function-gtk--tooltips-data-get">gtk.tooltips_data_get</link></methodna
       <title><link linkend="class-gtkwidget"><classname>gtk.Widget</classname></link> Functions</title>
 
       <programlisting><methodsynopsis language="python">
+	  <methodname><link linkend="function-gtk--widget-push-colormap">gtk.widget_push_colormap</link></methodname>
+	  <methodparam><parameter role="keyword">cmap</parameter></methodparam>
+	</methodsynopsis><methodsynopsis language="python">
+	  <methodname><link linkend="function-gtk--widget-push-composite-child">gtk.widget_push_composite_child</link></methodname>
+	  <methodparam></methodparam>
+	</methodsynopsis><methodsynopsis language="python">
+	  <methodname><link linkend="function-gtk--widget-pop-composite-child">gtk.widget_pop_composite_child</link></methodname>
+	  <methodparam></methodparam>
+	</methodsynopsis><methodsynopsis language="python">
+	  <methodname><link linkend="function-gtk--widget-pop-colormap">gtk.widget_pop_colormap</link></methodname>
+	  <methodparam></methodparam>
+	</methodsynopsis><methodsynopsis language="python">
+	  <methodname><link linkend="function-gtk--widget-get-default-style">gtk.widget_get_default_style</link></methodname>
+	  <methodparam></methodparam>
+	</methodsynopsis><methodsynopsis language="python">
+	  <methodname><link linkend="function-gtk--widget-set-default-colormap">gtk.widget_set_default_colormap</link></methodname>
+	  <methodparam><parameter role="keyword">colormap</parameter></methodparam>
+	</methodsynopsis><methodsynopsis language="python">
+	  <methodname><link linkend="function-gtk--widget-get-default-colormap">gtk.widget_get_default_colormap</link></methodname>
+	  <methodparam></methodparam>
+	</methodsynopsis><methodsynopsis language="python">
+	  <methodname><link linkend="function-gtk--widget-get-default-visual">gtk.widget_get_default_visual</link></methodname>
+	  <methodparam></methodparam>
+	</methodsynopsis><methodsynopsis language="python">
+	  <methodname><link linkend="function-gtk--widget-set-default-direction">gtk.widget_set_default_direction</link></methodname>
+	  <methodparam><parameter role="keyword">dir</parameter></methodparam>
+	</methodsynopsis><methodsynopsis language="python">
+	  <methodname><link linkend="function-gtk--widget-get-default-direction">gtk.widget_get_default_direction</link></methodname>
+	  <methodparam></methodparam>
+	</methodsynopsis><methodsynopsis language="python">
+	  <methodname><link linkend="function-gtk--widget-list-style-properties">gtk.widget_list_style_properties</link></methodname>
+	  <methodparam><parameter role="keyword">cmap</parameter></methodparam>
+	</methodsynopsis></programlisting>
+
+    </refsect2>
+
+    <refsect2>
+      <title><link linkend="class-gtkwindow"><classname>gtk.Window</classname></link> Functions</title>
+
+      <programlisting><methodsynopsis language="python">
 	  <methodname><link
 linkend="function-gtk--window-set-default-icon">gtk.window_set_default_icon</link></methodname>
 	  <methodparam><parameter role="keyword">icon</parameter></methodparam> </methodsynopsis><methodsynopsis language="python">
