@@ -50,6 +50,8 @@
 
 	* pygtk-gtkwindow.xml Fix typo.
 
+	* pygtk-gtk-functions.xml Add gtkWidget function links.
+
 2004-04-22  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gdkpixbuf.xml
